fixup! Improve trustlines theme for dark mode

--- a/apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
@@ -1,6 +1,7 @@
 // general
 $primary: #0f3255;
 $dark-primary: #1e8cc3;
+$dark-secondary: #f5faff; // Gets not applied for us so far, since it used for exchange graph only.
 $dark-primary-alternate: #1e8cc3;
 $secondary: #f5faff;
 $tertiary: #1e8cc3;
@@ -64,26 +65,11 @@ $btn-copy-color: $primary; // btn copy
 $btn-qr-color: $primary; // btn qr-code
 
 //links & tile
-.tile a {
-  color: $primary !important;
-} // links color for badges
-.tile-type-block {
-  border-left: 4px solid $primary;
-} // tab active bg
+$tile-body-a-color: $primary;
+$tile-type-block-color: $primary;
+$tile-type-progress-bar-color: $primary;
+a.tile-title { color: $primary !important; }
 
 // card
 $card-background-1: $primary;
 $card-tab-active: $primary;
-
-// Fix the dark mode
-.dark-theme-applied {
-  /*
-   * Per default, the following refers to the primary color of the light mode.
-   * But the dark blue as font color makes the text unreadable on the dark violet
-   * background color by the dark theme. This is exactly what our secondary theme
-   * color is about to solve for the light mode.
-   */
-  .tile a {
-    color: $secondary !important;
-  }
-}
